--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <section>
 
-            <h1>Hello, World!</h1>
+            <h3>Animated Background Gradient</h3>
             
         </section>
 
